<resources>
    <string name="app_name">labs-android</string>
    <string name="some_text">Some text</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="laboratory_work">Laboratory work</string>
    <string name="android">Android</string>
    <string name="item">Item</string>
    <string name="lab">Lab</string>
    <string name="button">Button</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="code">Code</string>
    <string name="you_clicked">You clicked</string>
    <string name="text_decision">Are you sure, you want to make decision?</string>

    <string name="zoom">Zoom</string>
    <string name="clockwise">Clockwise</string>
    <string name="fade">Fade</string>
    <string name="blink">Blink</string>
    <string name="move">Move</string>
    <string name="slide">Slide</string>

    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="stop_playing_recording">Stop playing recording</string>
    <string name="recording_started">Recording started</string>
    <string name="recording_completed">Recording completed</string>
    <string name="recording_playing">Recording playing</string>
    <string name="permission_is_not_granted">Permission is not granted</string>

    <string name="mode">Mode</string>
    <string name="ring">Ring</string>
    <string name="vibrate">Vibrate</string>
    <string name="silent">Silent</string>
    <string name="now_in">Now in</string>

    <string name="text_view" translatable="false">TextView</string>
    <string name="multi" translatable="false">Multi</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="check">Check</string>
    <string name="charging_on">Mobile is charging on</string>
    <string name="no_charge">Mobile does not charge</string>
    <string name="usb" translatable="false">USB</string>
    <string name="ac" translatable="false">AC</string>

    <string name="turn_on">Turn on</string>
    <string name="turn_off">Turn off</string>
    <string name="get_visible">Get visible</string>
    <string name="list_devices">List devices</string>
    <string name="paired_devices">Paired devices</string>
    <string name="turned_on">Turned on</string>
    <string name="turned_off">Turned off</string>
    <string name="already_on">Already on</string>
    <string name="showing_paired_devices">Showing Paired devices</string>

    <string name="allowed" translatable="false">Allowed</string>
    <string name="camera_pref" translatable="false">camera_pref</string>
    <string name="alert">Alert</string>
    <string name="text_camera_access">App needs to access the Camera.</string>
    <string name="dont_allow">Dont Allow</string>
    <string name="allow">Allow</string>
    <string name="settings">Settings</string>
    <string name="open_camera">Open Camera</string>

    <string name="copy_text">Copy text</string>
    <string name="paste_text">Paste text</string>
    <string name="copied_text">Copied text</string>
    <string name="pasted_text">Pasted text</string>

    <string name="share">Share</string>
    <string name="share_image_using">Share image using</string>

    <string name="title_activity_maps">Map</string>
    <string name="sydney">Marker in Sydney</string>
    <string name="open_map">Open Map</string>

    <string name="gray">Gray</string>
    <string name="bright">Bright</string>
    <string name="dark">Dark</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>

    <string name="left" translatable="false"><![CDATA[<]]></string>
    <string name="right" translatable="false"><![CDATA[>]]></string>

    <string name="enter_text">Enter text</string>
    <string name="read">Read</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="file_saved">File saved</string>
    <string name="file_loaded">File loaded</string>

    <string name="text_error">JSON parsing error:</string>
    <string name="text_could_not_get">Could not get JSON from server!</string>
    <string name="text_downloading">JSON Data is downloading</string>

    <string name="download">Download</string>

    <string name="sys_lang">Change system language(ru|en)</string>

    <string name="login">Login</string>
    <string name="text_attempts">Attempts left:</string>
    <string name="cancel">Cancel</string>
    <string name="wrong_credentials">Wrong Credentials</string>
    <string name="text_redirecting">Redirecting…</string>

    <string name="next" translatable="false"><![CDATA[>]]></string>
    <string name="rewind" translatable="false"><![CDATA[<<]]></string>
    <string name="forward" translatable="false"><![CDATA[>>]]></string>
    <string name="pause" translatable="false">||</string>
    <string name="song_name" translatable="false">song.mp3</string>

    <string-array name="lab_title">
        <item>Alert Dialog</item>
        <item>Animations</item>
        <item>Audio Capture</item>
        <item>AudioManager</item>
        <item>Auto Complete</item>
        <item>Best Practices</item>
        <item>Bluetooth</item>
        <item>Camera</item>
        <item>Clipboard</item>
        <item>Custom Fonts</item>

        <item>Data Backup</item>
        <item>Facebook Integration</item>
        <item>Gestures</item>
        <item>Google Maps</item>
        <item>Image Effects</item>
        <item>ImageSwitcher</item>
        <item>Internal Storage</item>
        <item>JSON Parser</item>
        <item>LinkedIn Integration</item>
        <item>Loading Spinner</item>

        <item>Localization</item>
        <item>Login Screen</item>
        <item>MediaPlayer</item>
        <item>Multitouch</item>
        <item>Navigation</item>
        <item>Network Connection</item>
        <item>PHP/MySQL</item>
        <item>Progress Circle</item>
        <item>ProgressBar</item>
        <item>Push Notification</item>

        <item>RenderScript</item>
        <item>RSS Reader</item>
        <item>Screen Cast</item>
        <item>Sensors</item>
        <item>Session Management</item>
        <item>Shared Preferences</item>
        <item>Spelling Checker</item>
        <item>SQLite Database</item>
        <item>Support Library</item>
        <item>Testing</item>

        <item>Text to Speech</item>
        <item>TextureView</item>
        <item>Twitter Integration</item>
        <item>WebView Layout</item>
        <item>Wi-Fi</item>
        <item>Widgets</item>
        <item>XML Parsers</item>
    </string-array>

    <string name="google_backup_key" translatable="false">AEdPqrEAAAAIPdjSOfT9GwUcPLcZeHnportCTYO4OHuCn21G6A</string>
</resources>
