<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.lab20.LabFragment15">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/some_text" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/laboratory_work"
        app:layout_constraintEnd_toEndOf="@+id/text1"
        app:layout_constraintStart_toStartOf="@+id/text1"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/spacing_256"
        android:layout_height="@dimen/spacing_256"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:contentDescription="@string/code"
        android:src="@drawable/code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gray"
        app:layout_constraintBottom_toBottomOf="@+id/materialButton2"
        app:layout_constraintEnd_toStartOf="@+id/materialButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialButton2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bright"
        app:layout_constraintBottom_toTopOf="@+id/materialButton5"
        app:layout_constraintEnd_toStartOf="@+id/materialButton3"
        app:layout_constraintStart_toEndOf="@+id/materialButton1"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark"
        app:layout_constraintBottom_toBottomOf="@+id/materialButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/materialButton2"
        app:layout_constraintTop_toTopOf="@+id/materialButton2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/materialButton6"
        app:layout_constraintStart_toEndOf="@+id/materialButton4"
        app:layout_constraintTop_toBottomOf="@+id/materialButton2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red"
        app:layout_constraintBottom_toBottomOf="@+id/materialButton5"
        app:layout_constraintEnd_toStartOf="@+id/materialButton5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialButton5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        app:layout_constraintBottom_toBottomOf="@+id/materialButton5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/materialButton5"
        app:layout_constraintTop_toTopOf="@+id/materialButton5" />

</androidx.constraintlayout.widget.ConstraintLayout>