<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.lab30.LabFragment23">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/some_text" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/laboratory_work"
        app:layout_constraintEnd_toEndOf="@+id/text1"
        app:layout_constraintStart_toStartOf="@+id/text1"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/spacing_128"
        android:layout_height="@dimen/spacing_128"
        android:contentDescription="@string/code"
        android:src="@drawable/code"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_small"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toStartOf="@+id/linearLayoutCompat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayoutCompat"
        tools:text="@string/some_text" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_small"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayoutCompat"
        app:layout_constraintTop_toTopOf="@+id/linearLayoutCompat"
        tools:text="@string/some_text" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="@dimen/no_spacing"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_small"
        android:layout_marginBottom="@dimen/spacing_xlarge"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/materialButton2"
        app:layout_constraintEnd_toStartOf="@+id/text4"
        app:layout_constraintStart_toEndOf="@+id/text3">

        <TextView
            android:id="@+id/text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_name"
            android:textAlignment="center" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginBottom="@dimen/spacing_xlarge"
        android:text="@string/rewind"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/materialButton2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_xlarge"
        android:text="@string/pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/materialButton3"
        app:layout_constraintStart_toEndOf="@+id/materialButton1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_xlarge"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/materialButton4"
        app:layout_constraintStart_toEndOf="@+id/materialButton2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_small"
        android:layout_marginBottom="@dimen/spacing_xlarge"
        android:text="@string/forward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/materialButton3" />

</androidx.constraintlayout.widget.ConstraintLayout>